[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["mgJin <jmg940701@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
black = "^23.3.0"
pillow = "^9.5.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.7.0"
django-environ = "^0.10.0"
django-cors-headers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
